@@ -1,4 +1,5 @@
 5.1.0~beta3 (2015-03-25)
+UPD: regex optimizations for season and expisode extraction
 UPD: kodion 1.2.0 tests (regex optimizations)
 
 5.1.0~beta2 (2015-03-24)
